--- a/client/about.htm
+++ b/client/about.htm
@@ -1,8 +1,8 @@
-<h2>meatspace</h2>
-<p class="secondary">Animated chat for animated people</p>
+<h2>partychurch</h2>
+<p class="secondary">The realest livestreaming around</p>
 
 <h3>Welcome!</h3>
-<p>meatspace is a place for people to come together and talk about almost anything. Using the
+<p>partychurch is a place for people to come together and talk about almost anything. Using the
 power of two second webcam recordings, it can bring about a much deeper sense of connection than
 most other Internet communication mediums. Say hi, stay a while!</P>
 
@@ -19,11 +19,7 @@ most other Internet communication mediums. Say hi, stay a while!</P>
 
 <h3>Code</h3>
 <p>All of the code for this site is available on
-<a href="https://github.com/tec27/seatcamp" target="_blank">GitHub</a>. Contributions are welcome!
-
-<h3>Twitter</h3>
-<p>Follow <a href="https://twitter.com/meatspac" target="_blank">@meatspac</a> to stay up to date
-with the latest meatspace events and news!</p>
+<a href="https://github.com/forivall/partychurch" target="_blank">GitHub</a>. Contributions are welcome!
 
 <h3>Thanks</h3>
 <p>Special thanks to <a href="https://twitter.com/ednapiranha" target="_blank">@ednapiranha</a>, the
